--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,40 +2,80 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="id.co.gesangmultimedia.siapic">
+
     <permission
         android:name="id.co.gesangmultimedia.siapic.MAPS_RECEIVE"
         android:protectionLevel="signature" />
+
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         tools:ignore="ScopedStorage" />
-
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+
     <compatible-screens>
+
         <!-- all small size screens -->
-        <screen android:screenSize="small" android:screenDensity="ldpi" />
-        <screen android:screenSize="small" android:screenDensity="mdpi" />
-        <screen android:screenSize="small" android:screenDensity="hdpi" />
-        <screen android:screenSize="small" android:screenDensity="xhdpi" />
-        <screen android:screenSize="small" android:screenDensity="xxhdpi" />
-        <screen android:screenSize="small" android:screenDensity="xxxhdpi" />
+        <screen
+            android:screenDensity="ldpi"
+            android:screenSize="small" />
+        <screen
+            android:screenDensity="mdpi"
+            android:screenSize="small" />
+        <screen
+            android:screenDensity="hdpi"
+            android:screenSize="small" />
+        <screen
+            android:screenDensity="xhdpi"
+            android:screenSize="small" />
+        <screen
+            android:screenDensity="xxhdpi"
+            android:screenSize="small" />
+        <screen
+            android:screenDensity="xxxhdpi"
+            android:screenSize="small" />
 
         <!-- all normal size screens -->
-        <screen android:screenSize="normal" android:screenDensity="ldpi" />
-        <screen android:screenSize="normal" android:screenDensity="mdpi" />
-        <screen android:screenSize="normal" android:screenDensity="hdpi" />
-        <screen android:screenSize="normal" android:screenDensity="xhdpi" />
-        <screen android:screenSize="normal" android:screenDensity="xxhdpi" />
-        <screen android:screenSize="normal" android:screenDensity="xxhdpi" />
+        <screen
+            android:screenDensity="ldpi"
+            android:screenSize="normal" />
+        <screen
+            android:screenDensity="mdpi"
+            android:screenSize="normal" />
+        <screen
+            android:screenDensity="hdpi"
+            android:screenSize="normal" />
+        <screen
+            android:screenDensity="xhdpi"
+            android:screenSize="normal" />
+        <screen
+            android:screenDensity="xxhdpi"
+            android:screenSize="normal" />
+        <screen
+            android:screenDensity="xxhdpi"
+            android:screenSize="normal" />
         <!-- all large size screens -->
-        <screen android:screenDensity="ldpi" android:screenSize="large"/>
-        <screen android:screenDensity="mdpi" android:screenSize="large"/>
-        <screen android:screenDensity="hdpi" android:screenSize="large"/>
-        <screen android:screenDensity="xhdpi" android:screenSize="large"/>
-        <screen android:screenDensity="xxxhdpi" android:screenSize="large"/>
-        <screen android:screenDensity="xxhdpi" android:screenSize="large"/>
+        <screen
+            android:screenDensity="ldpi"
+            android:screenSize="large" />
+        <screen
+            android:screenDensity="mdpi"
+            android:screenSize="large" />
+        <screen
+            android:screenDensity="hdpi"
+            android:screenSize="large" />
+        <screen
+            android:screenDensity="xhdpi"
+            android:screenSize="large" />
+        <screen
+            android:screenDensity="xxxhdpi"
+            android:screenSize="large" />
+        <screen
+            android:screenDensity="xxhdpi"
+            android:screenSize="large" />
     </compatible-screens>
 
     <application
@@ -48,30 +88,42 @@
         android:roundIcon="@drawable/siapik"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name="id.co.gesangmultimedia.siapic.BerandaSop"
-            android:configChanges="orientation|screenSize"/>
-        <activity android:name="id.co.gesangmultimedia.siapic.ShowPdf"
-            android:configChanges="orientation|screenSize"/>
-        <activity android:name="id.co.gesangmultimedia.siapic.TampilkanVideo"
-            android:configChanges="orientation|screenSize"/>
-        <activity android:name="id.co.gesangmultimedia.siapic.LaporanBug"
-            android:configChanges="orientation|screenSize"/>
-        <activity android:name="id.co.gesangmultimedia.siapic.Pengaturan"
-            android:configChanges="orientation|screenSize"/>
-        <activity android:name="id.co.gesangmultimedia.siapic.About"
-            android:configChanges="orientation|screenSize"/>
-        <activity android:name="id.co.gesangmultimedia.siapic.VideoPotensi"
-            android:configChanges="orientation|screenSize"/>
-        <activity android:name="id.co.gesangmultimedia.siapic.CumstomInfoContent"
+        <activity
+            android:name=".BerandaSop"
+            android:configChanges="orientation|screenSize" />
+        <activity
+            android:name=".ShowPdf"
+            android:configChanges="orientation|screenSize" />
+        <activity
+            android:name=".TampilkanVideo"
+            android:configChanges="orientation|screenSize" />
+        <activity
+            android:name=".LaporanBug"
+            android:configChanges="orientation|screenSize" />
+        <activity
+            android:name=".Pengaturan"
+            android:configChanges="orientation|screenSize" />
+        <activity
+            android:name=".About"
+            android:configChanges="orientation|screenSize" />
+        <activity
+            android:name=".VideoPotensi"
+            android:configChanges="orientation|screenSize" />
+        <activity
+            android:name=".CumstomInfoContent"
             android:configChanges="orientation"
-            android:screenOrientation="portrait"/>
-        <activity android:name="id.co.gesangmultimedia.siapic.RtrwCilacap"
-            android:configChanges="orientation|screenSize"/>
-        <activity android:name="id.co.gesangmultimedia.siapic.KawasanIndustri"
-            android:configChanges="orientation|screenSize"/>
-        <activity android:name="id.co.gesangmultimedia.siapic.PotensiUmum"
-            android:configChanges="orientation|screenSize"/>
-        <activity android:name="id.co.gesangmultimedia.siapic.SplashScreen"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".RtrwCilacap"
+            android:configChanges="orientation|screenSize" />
+        <activity
+            android:name=".KawasanIndustri"
+            android:configChanges="orientation|screenSize" />
+        <activity
+            android:name=".PotensiUmum"
+            android:configChanges="orientation|screenSize" />
+        <activity
+            android:name=".SplashScreen"
             android:configChanges="orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -79,10 +131,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="id.co.gesangmultimedia.siapic.DataKecamatan"
-            android:configChanges="orientation|screenSize"/>
-        <activity android:name="id.co.gesangmultimedia.siapic.MainActivity"
-            android:configChanges="orientation|screenSize"/>
+        <activity
+            android:name=".DataKecamatan"
+            android:configChanges="orientation|screenSize" />
+        <activity
+            android:name=".MainActivity"
+            android:configChanges="orientation|screenSize" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -94,4 +148,5 @@
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
     </application>
+
 </manifest>
