Si Apic v0.1.2 Beta Release Release Note: Fix Bug 1. Desain yang numpuk 2. Fix the width and height on Xiaomi with MIUI 11 above, Samsung Device 3. Fix allocation memory for device with below 1024MB RAM 4. Clean after closing application
Added function:
1. Custom Info Window Adapter, with extended information
2. Full stack mapping for SDK 29 and SDK 30

https://github.com/maslakonetop/siapic

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        release {
+            storeFile file('D:\\Project Aplikasi\\siapic\\siapik1.jks')
+            storePassword 'm4sl4k0n3clp'
+            keyAlias 'key1'
+            keyPassword 'm4sl4k0n3clp'
+        }
+    }
     compileSdkVersion 30
 
     defaultConfig {
